# ToyCppServer

./: .gitignore  CMakeLists.txt  README.md
assets/html/: 501.html
http/: http_connection.cpp  http_connection.h  http_parser.cpp  http_parser.h  http_task.cpp  http_task.h  middleWare.cpp  middleWare.h  response.cpp  response.h  router.cpp  router.h
middlewares/: middleware.cpp  middleware.h  router_middleware.cpp  router_middleware.h  static_file_middleware.cpp  static_file_middleware.h
server/: buffer.cpp  buffer.h  server.cpp  server.h
tests/: CMakeLists.txt  test_concurrent.sh  test_http_parser.cpp  test_middleware.cpp  test_response.cpp
